-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-05-12T17:56:08.275Z

CREATE SCHEMA moltrack;

CREATE TABLE moltrack.users (
  id uuid PRIMARY KEY NOT NULL,
  email text UNIQUE NOT NULL,
  first_name text NOT NULL,
  last_name text NOT NULL,
  has_password boolean NOT NULL,
  is_active boolean NOT NULL DEFAULT false,
  is_service_account boolean NOT NULL DEFAULT false,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id) DEFERRABLE INITIALLY DEFERRED,
  updated_by uuid NOT NULL REFERENCES moltrack.users (id) DEFERRABLE INITIALLY DEFERRED
);

-- Explains the meaning of a scalar property.
CREATE TABLE moltrack.semantic_types (
  id serial PRIMARY KEY,
  name text NOT NULL UNIQUE, -- e.g., Synonym, Molecule, Cell, Tissue, Organism, Treatment, Drug, Image...
  description text
);

-- Properties table - for declared, calculated, predicted and measured properties
CREATE TABLE moltrack.properties (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  name text NOT NULL,
  description text,
  -- value_type defines the colummn in the batch_details, assay_run_details and assay_results 
  -- tables that store the property value:
  -- * [value_num] for "int" and "double", 
  -- * [value_datetime] for "datetime", 
  -- * [value_uuid] for "uuid", 
  -- * [value_string] for "string"
  value_type text check (value_type in ('int', 'double', 'datetime', 'uuid', 'string')) NOT NULL,
  semantic_type_id INTEGER REFERENCES moltrack.semantic_types (id),
  property_class text check (property_class in ('DECLARED','CALCULATED', 'MEASURED', 'PREDICTED')) NOT NULL,
  unit text,
  scope text check (scope in ('BATCH', 'COMPOUND', 'ASSAY', 'ASSAY_RUN', 'ASSAY_RESULT', 'SYSTEM')) NOT NULL,
  pattern text, -- regex for validating string value_type properties, e.g., identifier: CHEMBL.* 
  UNIQUE(name, scope) -- Ensure unique property names within each scope
);

-- System settings like compound standardization rules, compound uniqueness rules, compound identification rules and synonym generation rules.
CREATE TABLE moltrack.settings (
  id serial PRIMARY KEY,
  name text NOT NULL,
  value text NOT NULL,
  description text NOT NULL
);

-- Sequence for compound registration numbers
CREATE SEQUENCE moltrack.molregno_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;

-- Compounds table - unique chemical structures
CREATE TABLE moltrack.compounds (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  canonical_smiles text NOT NULL,               -- RDKit canonical SMILES
  original_molfile text,                        -- as sketched by the chemist
  molregno int UNIQUE NOT NULL DEFAULT nextval('moltrack.molregno_seq'), -- generated by the system based on business rules
  inchi text NOT NULL,                          -- IUPAC InChI
  inchikey text NOT NULL,                -- IUPAC InChIKey
  formula text NOT NULL,                        -- e.g., C10H16N2O2
  hash_mol CHAR(40) UNIQUE NOT NULL,            -- https://rdkit.org/docs/source/rdkit.Chem.RegistrationHash.html#rdkit.Chem.RegistrationHash.GetMolHash
  hash_tautomer uuid NOT NULL,           -- hash of the tautomer
  hash_canonical_smiles uuid NOT NULL,   -- hash of the canonical SMILES
  hash_no_stereo_smiles uuid NOT NULL,   -- hash of the no stereo SMILES
  hash_no_stereo_tautomer uuid NOT NULL, -- hash of the no stereo tautomer
  is_archived boolean DEFAULT false,            -- soft delete
  deleted_at timestamp with time zone,          -- should use current_timestamp
  deleted_by uuid REFERENCES moltrack.users (id) -- can this hand
);

-- Compound details table - for declared, calculated, predicted and measured properties
CREATE TABLE moltrack.compound_details (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  compound_id int NOT NULL REFERENCES moltrack.compounds (id),
  property_id int NOT NULL REFERENCES moltrack.properties (id),
  value_datetime timestamp with time zone DEFAULT (CURRENT_TIMESTAMP),
  value_uuid uuid,
  value_num float,
  value_string text,
  value_qualifier smallint NOT NULL DEFAULT 0 check (value_qualifier in (0, 1, 2)) -- 0 for =, 1 for <, 2 for >
);

-- Additions table - for salts and solvates 
CREATE TABLE moltrack.additions (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  name text UNIQUE NOT NULL, -- ex. HCl
  description text,          -- ex. Hydrochloric acid
  code text,                 -- ex. AAC
  is_active boolean DEFAULT true,
  formula text,              -- ex. HCl
  molecular_weight real,     -- ex. 36.46
  smiles text,               -- ex. ClH
  molfile text,
  role text check (role in ('SALT', 'SOLVATE')),
  is_archived boolean DEFAULT false,
  deleted_at timestamp with time zone,
  deleted_by uuid REFERENCES moltrack.users (id) -- can this handle null?
);


-- Sequence for batch registration numbers
CREATE SEQUENCE moltrack.batch_regno_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;

-- Batch is a physical sample of the compound (for instance synthesized or procured).
CREATE TABLE moltrack.batches (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  compound_id int NOT NULL REFERENCES moltrack.compounds (id),
  batch_regno int UNIQUE NOT NULL DEFAULT nextval('moltrack.batch_regno_seq'), -- ex. 123456 auto-generated by the system following business rules
  notes text                       -- ex. "Batch of 100 mg of compound"
);

-- Batch additions table - for salts and solvates
CREATE TABLE moltrack.batch_additions (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  batch_id int NOT NULL REFERENCES moltrack.batches (id),
  addition_id int NOT NULL REFERENCES moltrack.additions (id),
  addition_equivalent real NOT NULL DEFAULT 1, -- relative to parent compound ex. 1.0 for 1:1 salt
  unique (batch_id, addition_id)
);

-- Batch details table - for declared, calculated, predicted and measured properties
CREATE TABLE moltrack.batch_details (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  batch_id int NOT NULL REFERENCES moltrack.batches (id),
  property_id int NOT NULL REFERENCES moltrack.properties (id),

  value_qualifier smallint NOT NULL DEFAULT 0 check (value_qualifier in (0, 1, 2)), -- 0 for =, 1 for <, 2 for >
  value_datetime timestamp with time zone DEFAULT (CURRENT_TIMESTAMP),
  value_uuid uuid,
  value_num float,
  value_string text
);

-- Assays table - for assays: kinase inhibition, cell viability, etc.
-- this is the level for the protocol such as hepatocyte stability
-- All of the required properties (see assay_properties) must be present in the assay results.
CREATE TABLE moltrack.assays (
  id serial PRIMARY KEY,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id),
  name text NOT NULL,
  description text
  -- author_id uuid references moltrack.users (id)
);

-- Assays details table - example domain: in vivo, in vitro, etc., detection method: fluorescence, etc. 
CREATE TABLE moltrack.assay_details (
  assay_id int NOT NULL REFERENCES moltrack.assays (id),
  property_id int NOT NULL REFERENCES moltrack.properties (id),
  required boolean NOT NULL DEFAULT false,

  value_datetime timestamp with time zone,
  value_uuid uuid,
  value_num real,
  value_string text
);

-- assay_runs table - for assay_runs: kinase inhibition, cell viability, etc.  
-- This is the level of the experiment executed by the user.
CREATE TABLE moltrack.assay_runs (
  id serial PRIMARY KEY,
  assay_id int NOT NULL REFERENCES moltrack.assays (id),
  name text NOT NULL,
  description text,
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id)
);

-- Assay details table - for declared, calculated, and measured properties
-- This is the level of the experiment executed by the user.
-- Details like assayer, eln reference, calculation date
-- experimental conditions like temperature, time, cell lot, protein lot, etc.
CREATE TABLE moltrack.assay_run_details (
  assay_run_id int NOT NULL REFERENCES moltrack.assay_runs (id),
  property_id int NOT NULL REFERENCES moltrack.properties (id),

  value_datetime timestamp with time zone DEFAULT (CURRENT_TIMESTAMP),
  value_uuid uuid,
  value_num float,
  value_string text,
  unique (assay_run_id, property_id)
);

-- Assay properties table - for assay type properties
-- This should detail the required and optional result types for a given assay type.
-- This is used to validate the data submitted for an assay.
CREATE TABLE moltrack.assay_properties (
  assay_id int NOT NULL REFERENCES moltrack.assays (id),
  property_id int NOT NULL REFERENCES moltrack.properties (id),
  required bool NOT NULL DEFAULT false,
  PRIMARY KEY (assay_id, property_id)
);

-- Assay results table - actual measurements: IC50, EC50, etc.
CREATE TABLE moltrack.assay_results (
  id serial PRIMARY KEY,
  batch_id int NOT NULL REFERENCES moltrack.batches (id),
  assay_run_id int NOT NULL REFERENCES moltrack.assay_runs (id),
  created_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  updated_at timestamp with time zone DEFAULT (CURRENT_TIMESTAMP) NOT NULL,
  created_by uuid NOT NULL REFERENCES moltrack.users (id),
  updated_by uuid NOT NULL REFERENCES moltrack.users (id)
);

CREATE TABLE moltrack.assay_result_details (
  assay_result_id int NOT NULL REFERENCES moltrack.assay_results (id),
  property_id int NOT NULL REFERENCES moltrack.properties (id),
  
  -- For performance reasons, only numbers, strings, and booleans are supported for assay results (no datetime or uuid).
  value_qualifier smallint NOT NULL DEFAULT 0 check (value_qualifier in (0, 1, 2)), -- 0 for =, 1 for <, 2 for >
  value_num float,
  value_string text,
  value_bool boolean
);

GRANT ALL PRIVILEGES ON SCHEMA moltrack TO CURRENT_USER;
GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA moltrack TO CURRENT_USER;
GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA moltrack TO CURRENT_USER;